refactored most of html and css naming, changed to new bg file names / naming convention, added to gitignore, removed secondary info lines, changed order of all hero blocks created and uploaded image repo AI file for future changes, renamed all backgrounds

--- a/index.html
+++ b/index.html
@@ -27,91 +27,42 @@
 
 <div class="wrapper">
 
+
+    <!--------------------------------------------->
+    <!---------- C01.2 - HERO – CAROUSEL ---------->
+    <!--------------------------------------------->
+
     <div class="info-block">
         <div class="info-text-heading">
-            HERO COMPONENT
-        </div>
-        <div class="info-text">
-            RATIO: calc(477 / 848 * 100%)
+            C01.2 - HERO – CAROUSEL
         </div>
     </div>
 
-
-
-    <!-- HERO - STANDARD -->
-
-    <div class="wrap-banner hero-box">
-
-        <div class="panel-banner panel-hero">
-            <img class="logo-responsive" src="https://antonvoltchok.github.io/responsive-bbb/img/logo-ellen.png"/>
-            <div class="button-ghost">Shop all ED Now</div>
-        </div>
-
-        <div class="aspect-holder">
-            <div class="hero-ratio bg-hero"></div>
-        </div>
-
-    </div>
-    <div class="spacer"></div>
-
-
-
-    <!-- HERO - LOGO / SHORT VERSION -->
-
-    <div clas="info-block">
-        <div class="info-text-heading">
-            HERO - LOGO ONLY
-        </div>
-        <div class="info-text">
-            RATIO: calc(300 / 848 * 100%)
-            <div>HOVER: calc(300 / 848 * 117%)</div>
-            <div class="spacer"></div>
-            <div style="color: #8445ff; font-weight: 500">[In Mobile, Hover On Image Below !!]</div>
-        </div>
-    </div>
-
-    <!--HERO-SHORT-->
-    <div class="wrap-banner hero-box-short">
-
-        <div class="panel-banner panel-only-logo">
-            <img class="logo-responsive" src="https://antonvoltchok.github.io/responsive-bbb/img/logo-edit-kitchenaid.png"/>
-        </div>
-
-        <div class="aspect-holder">
-            <div class="hero-short-ratio bg-hero-short"></div>
-        </div>
-
-    </div>
-    <div class="spacer"></div>
-
-    <div clas="info-block">
-        <div class="info-text-heading">
-            CAROUSEL
-        </div>
-        <div class="info-text">
-            RATIO: calc(440 / 848 * 100%)
-        </div>
-    </div>
-
-    <!--CAROUSEL BAD EXAMPLE-->
-    <div class="wrap-banner carousel-box carousel-bg">
-
-        <div class="panel-banner panel-carousel panel-carousel-bad-ver">
-            <h2 class="panel-heading">Lorem Ipsum</h2>
+    <div class="wrap-banner carousel-box bg-carousel">
+        <div class="panel-banner panel-carousel panel-carousel-full">
+            <h2 class="panel-heading">Lorem ipsum dolor sit amet enim elit</h2>
             <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
                 room and budget.</p>
             <div class="button-secondary">Shop Windows</div>
             <div class="panel-breaker-mid"></div>
         </div>
-
         <div class="aspect-holder-full">
-            <div class="carousel-bad-ex-ratio bg-carousel-bad-ex"></div>
+            <div class="ratio-carousel bg-carousel"></div>
         </div>
     </div>
 
-    <!--CAROUSEL GOOD EXAMPLE-->
-    <div class="wrap-banner carousel-box carousel-bg">
 
+    <!--------------------------------------------->
+    <!---- C01.2 HERO - CAROUSEL (alternate A) ---->
+    <!--------------------------------------------->
+
+    <div class="info-block">
+        <div class="info-text-heading">
+            C01.2 - HERO – CAROUSEL (alternate A)
+        </div>
+    </div>
+
+    <div class="wrap-banner carousel-box carousel-bg">
         <div class="panel-banner panel-carousel gradient-light-grays">
             <h2 class="panel-heading">Lorem Ipsum</h2>
             <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
@@ -121,37 +72,112 @@
         </div>
 
         <div class="aspect-holder">
-            <div class="aspect-inner carousel-ratio bg-carousel-good-ex"></div>
+            <div class="aspect-inner ratio-carousel bg-carousel-alt-a"></div>
         </div>
     </div>
 
 
-    <!--FULL WIDTH AND CENTERED-->
+    <!--------------------------------------------->
+    <!--- C01.2 - HERO - CAROUSEL (alternate B) --->
+    <!--------------------------------------------->
+
     <div class="info-block">
         <div class="info-text-heading">
-            FULL WIDTH
-        </div>
-        <div class="info-text">
-            RATIO: calc(316 / 1280 * 100%)
+            C01.2 - HERO – CAROUSEL (alternate B)
         </div>
     </div>
+    <div class="wrap-banner carousel-box carousel-bg">
+        <div class="panel-banner panel-carousel panel-carousel-full">
+            <h2 class="panel-heading">Lorem ipsum dolor sit amet enim elit</h2>
+            <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
+                room and budget.</p>
+            <div class="button-secondary">Shop Windows</div>
+            <div class="panel-breaker-mid"></div>
+        </div>
+        <div class="aspect-holder-full">
+            <div class="carousel-bad-ex-ratio bg-carousel-bad-ex"></div>
+        </div>
+    </div>
+
+
+    <!------------------------------------------>
+    <!---------- C01.2 - HERO – BRAND ---------->
+    <!------------------------------------------>
+
+    <div class="wrap-banner hero-box">
+
+        <div class="panel-banner panel-hero">
+            <img class="logo-responsive" src="https://antonvoltchok.github.io/responsive-bbb/img/logo-ellen.png"/>
+            <div class="button-ghost">Shop all ED Now</div>
+        </div>
+
+        <div class="aspect-holder">
+            <div class="ratio-hero-brand bg-hero-brand"></div>
+        </div>
+
+    </div>
+    <div class="spacer"></div>
+
+
+    <!---------------------------------------------------->
+    <!---------- C01.2 - HERO – BRAND V2 - SLIM ---------->
+    <!---------------------------------------------------->
+    <div class="info-block">
+        <div class="info-text-heading">
+            C01.2 - HERO – CAROUSEL (alternate B)
+        </div>
+    </div>
+    <div class="wrap-banner hero-box-short">
+        <div class="panel-banner panel-only-logo">
+            <img class="logo-responsive"
+                 src="https://antonvoltchok.github.io/responsive-bbb/img/logo-edit-kitchenaid.png"/>
+        </div>
+        <div class="aspect-holder">
+            <div class="ratio-hero-slim bg-hero-slim"></div>
+        </div>
+    </div>
+    <div class="spacer"></div>
+
+    <!--------------------------------------------------->
+    <!--- C03.4 - MERCHANDISING - LARGE FULL WIDTH V1 --->
+    <!--------------------------------------------------->
+
+    <div class="info-block">
+        <div class="info-text-heading">
+            C03.4 - MERCHANDISING - LARGE FULL WIDTH V1
+        </div>
+    </div>
+    <div class="wrap-banner carousel-box carousel-bg">
+        <div class="panel-banner panel-carousel panel-carousel-full">
+            <h2 class="panel-heading">Lorem ipsum dolor sit amet enim elit</h2>
+            <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
+                room and budget.</p>
+            <div class="button-secondary">Shop Windows</div>
+            <div class="panel-breaker-mid"></div>
+        </div>
+        <div class="aspect-holder-full">
+            <div class="carousel-bad-ex-ratio bg-carousel-bad-ex"></div>
+        </div>
+    </div>
+
+
 
     <div class="">
-       <div>
-           <img class="full-desktop-img" src="https://antonvoltchok.github.io/responsive-bbb/img/bg-full-1280.png"/>
-           <div class="full-content">
-               <div class="">
-                   <img class="full-mobile-img" src="https://antonvoltchok.github.io/responsive-bbb/img/full-mobile-320.png"/>
-               </div>
-               <h2 class="panel-heading">Logo</h2>
-               <p class="panel-text">Enjoy Consistent Reliable Results Every Time You Bake
-                   room and budget.</p>
-               <div class="button-secondary">Shop Caption</div>
-               <div class="panel-breaker-mid"></div>
-           </div>
-       </div>
+        <div>
+            <img class="full-desktop-img" src="https://antonvoltchok.github.io/responsive-bbb/img/bg-full-1280.png"/>
+            <div class="full-content">
+                <div class="">
+                    <img class="full-mobile-img"
+                         src="https://antonvoltchok.github.io/responsive-bbb/img/full-mobile-320.png"/>
+                </div>
+                <h2 class="panel-heading">Logo</h2>
+                <p class="panel-text">Enjoy Consistent Reliable Results Every Time You Bake
+                    room and budget.</p>
+                <div class="button-secondary">Shop Caption</div>
+                <div class="panel-breaker-mid"></div>
+            </div>
+        </div>
     </div>
-
 
 
     <div class="spacer"></div>
