fixed bad image paths, changing class hnames

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div class="wrap-banner carousel-box bg-carousel">
+    <div class="wrap-banner carousel-box bg-carousel relative">
         <div class="panel-banner panel-carousel panel-carousel-full">
             <h2 class="panel-heading">Lorem ipsum dolor sit amet enim elit</h2>
             <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <div class="wrap-banner carousel-box carousel-bg">
+    <div class="wrap-banner carousel-box carousel-bg relative">
         <div class="panel-banner panel-carousel gradient-light-grays">
             <h2 class="panel-heading">Lorem Ipsum</h2>
             <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
@@ -72,7 +72,7 @@
         </div>
 
         <div class="aspect-holder">
-            <div class="aspect-inner ratio-carousel bg-carousel-alt-a"></div>
+            <div class="aspect-inner ratio-carousel-alt-a bg-carousel-alt-a"></div>
         </div>
     </div>
 
@@ -86,7 +86,7 @@
             C01.2 - HERO – CAROUSEL (alternate B)
         </div>
     </div>
-    <div class="wrap-banner carousel-box carousel-bg">
+    <div class="wrap-banner carousel-box carousel-bg relative">
         <div class="panel-banner panel-carousel panel-carousel-full">
             <h2 class="panel-heading">Lorem ipsum dolor sit amet enim elit</h2>
             <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
@@ -95,7 +95,7 @@
             <div class="panel-breaker-mid"></div>
         </div>
         <div class="aspect-holder-full">
-            <div class="carousel-bad-ex-ratio bg-carousel-bad-ex"></div>
+            <div class="ratio-carousel bg-carousel-alt-b"></div>
         </div>
     </div>
 
@@ -106,7 +106,7 @@
 
     <div class="wrap-banner hero-box">
 
-        <div class="panel-banner panel-hero">
+        <div class="panel-banner panel-hero relative">
             <img class="logo-responsive" src="https://sapientnyc.github.io/img/logo-ellen.png"/>
             <div class="button-ghost">Shop all ED Now</div>
         </div>
@@ -124,7 +124,7 @@
     <!---------------------------------------------------->
     <div class="info-block">
         <div class="info-text-heading">
-            C01.2 - HERO – CAROUSEL (alternate B)
+            C01.2 - HERO – BRAND V2 - SLIM
         </div>
     </div>
     <div class="wrap-banner hero-box-short">
@@ -133,7 +133,7 @@
                  src="https://sapientnyc.github.io/img/logo-edit-kitchenaid.png"/>
         </div>
         <div class="aspect-holder">
-            <div class="ratio-hero-slim bg-hero-slim"></div>
+            <div class="ratio-hero-brand-slim-slim bg-hero-brand-slim"></div>
         </div>
     </div>
     <div class="spacer"></div>
@@ -152,30 +152,11 @@
             <h2 class="panel-heading">Lorem ipsum dolor sit amet enim elit</h2>
             <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
                 room and budget.</p>
-            <div class="button-secondary">Shop Windows</div>
+            <div class="button-secondary">Shop Caption</div>
             <div class="panel-breaker-mid"></div>
         </div>
         <div class="aspect-holder-full">
-            <div class="carousel-bad-ex-ratio bg-carousel-bad-ex"></div>
-        </div>
-    </div>
-
-
-
-    <div class="">
-        <div>
-            <img class="full-desktop-img" src="https://sapientnyc.github.io/img/bg-full-1280.png"/>
-            <div class="full-content">
-                <div class="">
-                    <img class="full-mobile-img"
-                         src="https://sapientnyc.github.io/img/full-mobile-320.png"/>
-                </div>
-                <h2 class="panel-heading">Logo</h2>
-                <p class="panel-text">Enjoy Consistent Reliable Results Every Time You Bake
-                    room and budget.</p>
-                <div class="button-secondary">Shop Caption</div>
-                <div class="panel-breaker-mid"></div>
-            </div>
+            <div class="ratio-carousel bg-merchandise"></div>
         </div>
     </div>
 
