Cleaned up presentation. Rewired styling, added and edited headings and implemented alternates

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!--------------------------------------------->
     <!---------- C01.2 - HERO – CAROUSEL ---------->
-    <!--------------------------------------------->
+    <!---------------------------------------------->
 
     <div class="info-block">
         <div class="info-text-heading">
@@ -38,16 +38,18 @@
         </div>
     </div>
 
-    <div class="wrap-banner carousel-box bg-carousel">
+    <div class="wrap-banner carousel-box bg-full-carousel">
         <div class="panel-banner panel-carousel panel-carousel-full">
             <h2 class="panel-heading">Lorem ipsum dolor sit amet enim elit</h2>
             <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
                 room and budget.</p>
-            <div class="button-secondary">Shop Windows</div>
+            <div class="button-wrapper">
+                <div class="button-secondary">Shop Windows</div>
+            </div>
             <div class="panel-breaker-mid"></div>
         </div>
         <div class="aspect-holder-full">
-            <div class="ratio-carousel bg-carousel"></div>
+            <div class="ratio-carousel"></div>
         </div>
     </div>
 
@@ -66,13 +68,15 @@
         <div class="panel-banner panel-carousel gradient-light-grays">
             <h2 class="panel-heading">Lorem Ipsum</h2>
             <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
-                room and budget.</p>
-            <div class="button-secondary">Shop Windows</div>
+                room and budget.From black-out shades to custom designs, we have the styles and colors to fit every room and budget.</p>
+            <div class="button-wrapper">
+                <div class="button-secondary">Shop Windows</div>
+            </div>
             <div class="panel-breaker-mid"></div>
         </div>
 
         <div class="aspect-holder">
-            <div class="aspect-inner ratio-carousel bg-carousel-alt-a"></div>
+            <div class="aspect-inner ratio-carousel-alt-a bg-carousel-alt-a"></div>
         </div>
     </div>
 
@@ -86,16 +90,20 @@
             C01.2 - HERO – CAROUSEL (alternate B)
         </div>
     </div>
+
     <div class="wrap-banner carousel-box carousel-bg">
-        <div class="panel-banner panel-carousel panel-carousel-full">
-            <h2 class="panel-heading">Lorem ipsum dolor sit amet enim elit</h2>
-            <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
-                room and budget.</p>
-            <div class="button-secondary">Shop Windows</div>
+        <div class="panel-banner panel-carousel gradient-light-grays panel-alt-b">
+            <h2 class="panel-heading">Lorem Ipsum</h2>
+            <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every room and budget.From black-out
+                shades to custom designs, we have the styles and colors to fit every room and budget.</p>
+            <div class="button-wrapper">
+                <div class="button-secondary">Shop Windows</div>
+            </div>
             <div class="panel-breaker-mid"></div>
         </div>
-        <div class="aspect-holder-full">
-            <div class="carousel-bad-ex-ratio bg-carousel-bad-ex"></div>
+    
+        <div class="aspect-holder">
+            <div class="aspect-inner ratio-carousel-alt-b bg-carousel-alt-b"></div>
         </div>
     </div>
 
@@ -103,6 +111,12 @@
     <!------------------------------------------>
     <!---------- C01.2 - HERO – BRAND ---------->
     <!------------------------------------------>
+
+    <div class="info-block">
+        <div class="info-text-heading">
+            C01.3 - HERO – BRAND
+        </div>
+    </div>
 
     <div class="wrap-banner hero-box">
 
@@ -124,7 +138,7 @@
     <!---------------------------------------------------->
     <div class="info-block">
         <div class="info-text-heading">
-            C01.2 - HERO – CAROUSEL (alternate B)
+            C01.3 - HERO – BRAND (Slim)
         </div>
     </div>
     <div class="wrap-banner hero-box-short">
@@ -133,7 +147,7 @@
                  src="https://sapientnyc.github.io/img/logo-edit-kitchenaid.png"/>
         </div>
         <div class="aspect-holder">
-            <div class="ratio-hero-slim bg-hero-slim"></div>
+            <div class="ratio-hero-brand-slim bg-hero-brand-slim"></div>
         </div>
     </div>
     <div class="spacer"></div>
@@ -147,20 +161,6 @@
             C03.4 - MERCHANDISING - LARGE FULL WIDTH V1
         </div>
     </div>
-    <div class="wrap-banner carousel-box carousel-bg">
-        <div class="panel-banner panel-carousel panel-carousel-full">
-            <h2 class="panel-heading">Lorem ipsum dolor sit amet enim elit</h2>
-            <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
-                room and budget.</p>
-            <div class="button-secondary">Shop Windows</div>
-            <div class="panel-breaker-mid"></div>
-        </div>
-        <div class="aspect-holder-full">
-            <div class="carousel-bad-ex-ratio bg-carousel-bad-ex"></div>
-        </div>
-    </div>
-
-
 
     <div class="">
         <div>
