Merch module updates

--- a/index.html
+++ b/index.html
@@ -164,21 +164,16 @@
             C03.4 - MERCHANDISING - LARGE FULL WIDTH V1
         </div>
     </div>
-    <div class="">
-        <div>
-            <img class="full-desktop-img" src="https://sapientnyc.github.io/img/bg-full-1280.png"/>
-            <div class="full-content">
-                <div class="">
-                    <img class="full-mobile-img"
-                         src="https://sapientnyc.github.io/img/full-mobile-320.png"/>
-                </div>
-                <h2 class="panel-heading">Logo</h2>
-                <p class="panel-text">Enjoy Consistent Reliable Results Every Time You Bake
-                    room and budget.</p>
+    <div class="wrap-merch-banner bg-merchandise">
+        <div class="ratio-merchandising"></div>
+        <div class="merch-full-content">
+            <h2 class="merch-panel-heading">Logo</h2>
+            <p class="merch-panel-text">Enjoy Consistent Reliable Results Every Time You Bake
+                room and budget.</p>
+            <div class="merch-button-wrapper">
                 <div class="button-secondary">Shop Caption</div>
-                <div class="panel-breaker-mid"></div>
             </div>
-
+            <div class="panel-breaker-mid"></div>
         </div>
     </div>
 
