--- a/index.html
+++ b/index.html
@@ -188,8 +188,6 @@
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
-<script s`rc="js/main.js"></script>
-
-<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+<script src="js/main.js"></script>
 </body>
 </html>
