--- a/index.html
+++ b/index.html
@@ -177,9 +177,7 @@
         </div>
     </div>
 
-
-    <div class="spacer"></div>
-    <div class="spacer"></div>
+    <div style="height: 350px;"></div>
 </div>
 
 
