extra version on merch and subtitles

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="info-text-heading">
             C01.2 - HERO – CAROUSEL
         </div>
+        <div class="info-text">Dimensions: 1280 x 440</div>
     </div>
 
     <div class="wrap-banner carousel-box bg-full-carousel">
@@ -63,6 +64,7 @@
         <div class="info-text-heading">
             C01.2 - HERO – CAROUSEL (alternate A)
         </div>
+        <div class="info-text">Dimensions: 780 x 440</div>
     </div>
 
     <div class="wrap-banner carousel-box carousel-bg relative">
@@ -90,6 +92,7 @@
         <div class="info-text-heading">
             C01.2 - HERO – CAROUSEL (alternate B)
         </div>
+        <div class="info-text">Dimensions: 780 x 440</div>
     </div>
 
     <div class="wrap-banner carousel-box carousel-bg">
@@ -118,6 +121,7 @@
         <div class="info-text-heading">
             C01.3 - HERO – BRAND
         </div>
+        <div class="info-text">Dimensions: 780 x 440</div>
     </div>
 
     <div class="wrap-banner hero-box">
@@ -142,6 +146,7 @@
         <div class="info-text-heading">
             C01.3 - HERO – BRAND V2 - SLIM
         </div>
+        <div class="info-text">Dimensions: 848 x 300</div>
     </div>
     <div class="wrap-banner hero-box-short">
         <div class="panel-banner panel-only-logo">
@@ -163,6 +168,7 @@
         <div class="info-text-heading">
             C03.4 - MERCHANDISING - LARGE FULL WIDTH V1
         </div>
+        <div class="info-text">Dimensions: 1280 x 316</div>
     </div>
     <div class="wrap-merch-banner bg-merchandise">
         <div class="ratio-merchandising"></div>
@@ -176,6 +182,32 @@
             <div class="panel-breaker-mid"></div>
         </div>
     </div>
+    <div class="spacer"></div>
+
+    <!------------------------------------------------------------>
+    <!---   C03.4 - MERCHANDISING - ALTERNATIVE - SCALED RATIO --->
+    <!------------------------------------------------------------>
+    <div class="merch-spacer"></div>
+    <div class="info-block">
+        <div class="info-text-heading">
+            C03.4 - MERCHANDISING - ALTERNATIVE - SCALED RATIO
+        </div>
+        <div class="info-text">Dimensions: 1280 x 316</div>
+    </div>
+    <div class="wrap-merch-banner bg-merchandise bg-merch-alt-1">
+        <div class="ratio-merchandising"></div>
+        <div class="merch-full-content merch-content-full-alt">
+            <h2 class="merch-panel-heading">Logo</h2>
+            <p class="merch-panel-text">Enjoy Consistent Reliable Results Every Time You Bake
+                room and budget.</p>
+            <div class="merch-button-wrapper">
+                <div class="button-secondary">Shop Caption</div>
+            </div>
+            <div class="panel-breaker-mid"></div>
+        </div>
+    </div>
+
+
 
     <div style="height: 350px;"></div>
 </div>
@@ -186,6 +218,6 @@
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+<!--<script src="js/main.js"></script>-->
 </body>
 </html>
