removed requested sections, fixed scaling issues with merch section, removed mobile gutter

--- a/index.html
+++ b/index.html
@@ -56,63 +56,6 @@
     </div>
 
 
-    <!--------------------------------------------->
-    <!---- C01.2 HERO - CAROUSEL (alternate A) ---->
-    <!--------------------------------------------->
-
-    <div class="info-block">
-        <div class="info-text-heading">
-            C01.2 - HERO – CAROUSEL (alternate A)
-        </div>
-        <div class="info-text">Dimensions: 780 x 440</div>
-    </div>
-
-    <div class="wrap-banner carousel-box carousel-bg relative">
-        <div class="panel-banner panel-carousel gradient-light-grays">
-            <h2 class="panel-heading">Lorem Ipsum</h2>
-            <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every
-                room and budget.From black-out shades to custom designs, we have the styles and colors to fit every room and budget.</p>
-            <div class="button-wrapper">
-                <div class="button-secondary">Shop Windows</div>
-            </div>
-            <div class="panel-breaker-mid"></div>
-        </div>
-
-        <div class="aspect-holder">
-            <div class="aspect-inner ratio-carousel-alt-a bg-carousel-alt-a"></div>
-        </div>
-    </div>
-
-
-    <!--------------------------------------------->
-    <!--- C01.2 - HERO - CAROUSEL (alternate B) --->
-    <!--------------------------------------------->
-
-    <div class="info-block">
-        <div class="info-text-heading">
-            C01.2 - HERO – CAROUSEL (alternate B)
-        </div>
-        <div class="info-text">Dimensions: 780 x 440</div>
-    </div>
-
-    <div class="wrap-banner carousel-box carousel-bg">
-        <div class="panel-banner panel-carousel gradient-light-grays panel-alt-b">
-            <h2 class="panel-heading">Lorem Ipsum</h2>
-            <p class="panel-text">From black-out shades to custom designs, we have the styles and colors to fit every room and budget.From black-out
-                shades to custom designs, we have the styles and colors to fit every room and budget.</p>
-            <div class="button-wrapper">
-                <div class="button-secondary">Shop Windows</div>
-            </div>
-            <div class="panel-breaker-mid"></div>
-        </div>
-    
-        <div class="aspect-holder">
-            <div class="aspect-inner ratio-carousel-alt-b bg-carousel-alt-b"></div>
-
-        </div>
-    </div>
-
-
     <!------------------------------------------>
     <!---------- C01.2 - HERO – BRAND ---------->
     <!------------------------------------------>
@@ -146,7 +89,7 @@
         <div class="info-text-heading">
             C01.3 - HERO – BRAND V2 - SLIM
         </div>
-        <div class="info-text">Dimensions: 848 x 300</div>
+        <div class="info-text">Dimensions: 780 x 300</div>
     </div>
     <div class="wrap-banner hero-box-short">
         <div class="panel-banner panel-only-logo">
@@ -174,42 +117,26 @@
         <div class="ratio-merchandising"></div>
         <div class="merch-full-content">
             <h2 class="merch-panel-heading">Logo</h2>
-            <p class="merch-panel-text">Enjoy Consistent Reliable Results Every Time You Bake
-                room and budget.</p>
+            <div class="center-margin">
+                <p class="merch-panel-text">Enjoy Consistent Reliable Results Every Time You Bake
+                    room and budget.</p>
+            </div>
             <div class="merch-button-wrapper">
                 <div class="button-secondary">Shop Caption</div>
             </div>
             <div class="panel-breaker-mid"></div>
         </div>
+
     </div>
+
     <div class="spacer"></div>
 
-    <!------------------------------------------------------------>
-    <!---   C03.4 - MERCHANDISING - ALTERNATIVE - SCALED RATIO --->
-    <!------------------------------------------------------------>
-    <div class="merch-spacer"></div>
-    <div class="info-block">
-        <div class="info-text-heading">
-            C03.4 - MERCHANDISING - ALTERNATIVE - SCALED RATIO
-        </div>
-        <div class="info-text">Dimensions: 1280 x 316</div>
-    </div>
-    <div class="wrap-merch-banner bg-merchandise bg-merch-alt-1">
-        <div class="ratio-merchandising"></div>
-        <div class="merch-full-content merch-content-full-alt">
-            <h2 class="merch-panel-heading">Logo</h2>
-            <p class="merch-panel-text">Enjoy Consistent Reliable Results Every Time You Bake
-                room and budget.</p>
-            <div class="merch-button-wrapper">
-                <div class="button-secondary">Shop Caption</div>
-            </div>
-            <div class="panel-breaker-mid"></div>
-        </div>
-    </div>
-
-
-
     <div style="height: 350px;"></div>
+
+
+
+
+
 </div>
 
 
@@ -221,3 +148,15 @@
 <!--<script src="js/main.js"></script>-->
 </body>
 </html>
+
+
+
+
+<!--
+
+
+remove top merch
+fix the bottom merch
+logo - right now 200x200 max width and height, expand width as much as is comfortable
+
+-->
